--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -9,43 +9,44 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         {% endblock %}
     </head>
-    <body>
-        {% block body %}
+        <body>
+            {% block body %}
+                <nav>
+                    {% block nav %}
+                        <div class="actions">
+                            <a href="{{ url_for('main.index') }}">Index</a>
+                            <a href="{{ url_for('auth.register') }}">Register</a>
+                            <a href="{{ url_for('auth.login') }}">Login</a>
+                        </div>
+                    {% endblock %}
+                </nav>
 
-        <nav>
-            {% block nav %}
-                <div class="actions">
-                    <a href="{{ url_for('main.index') }}">Index</a>
-                    <a href="{{ url_for('auth.register') }}">Register</a>
-                    <a href="{{ url_for('auth.login') }}">Login</a>
-                </div>
-            {% endblock %}
-        </nav>
+                <main>
+                    {% block main %}
+                        <div id="content">
+                            {% block content %}
+                            {% endblock %}
+                        </div>
+                    {% endblock %}
+                </main>
 
-        <main>
-            <div id="content">
-                {% block content %}
+                {% block flashes %}
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            <ul class=flashes>
+                            {% for category, message in messages %}
+                                <li class="alert alert-{{ category }}">{{ message }}</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
+                    {% endwith %}
                 {% endblock %}
-            </div>
-        </main>
 
-        {% block flashes %}
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    <ul class=flashes>
-                    {% for category, message in messages %}
-                        <li class="alert alert-{{ category }}">{{ message }}</li>
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-            {% endwith %}
-        {% endblock %}
-
-        <footer>
-            {% block footer %}
-            &copy; Bodøvision 2024 <a href="http://uit.no/">UiT</a>.
+                <footer>
+                    {% block footer %}
+                        &copy; Bodøvision 2024 <a href="http://uit.no/">UiT</a>.
+                    {% endblock %}
+                </footer>
             {% endblock %}
-        </footer>
-        {% endblock %}
-    </body>
+        </body>
 </html>
