--- a/flask_app/app/templates/auth/login.html
+++ b/flask_app/app/templates/auth/login.html
@@ -8,16 +8,16 @@
         <form method="POST" action="{{ url_for('.login') }}" class="mt-4">
             {{ form.hidden_tag() }}
             <div class="mb-3">
-                {{ form.username.label(class="form-label") }}
-                {{ form.username(class="form-control", id="username") }}
+                {{ form.username.label(class="form-label") | escape }}
+                {{ form.username(class="form-control", id="username") | escape }}
             </div>
             <div class="mb-3">
-                {{ form.password.label(class="form-label") }}
-                {{ form.password(class="form-control", id="password") }}
+                {{ form.password.label(class="form-label") | escape }}
+                {{ form.password(class="form-control", id="password") | escape }}
             </div>
             <div class="mb-3">
-                {{ form.remember_me(class="form-check-input") }}
-                {{ form.remember_me.label(class="form-check-label") }}
+                {{ form.remember_me(class="form-check-input") | escape  }}
+                {{ form.remember_me.label(class="form-check-label") | escape  }}
             </div>
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary") }}
