removed |escape since its enabled by default, and added some tests for testing xss and potentially sql injection

--- a/flask_app/app/templates/auth/change_username.html
+++ b/flask_app/app/templates/auth/change_username.html
@@ -9,7 +9,7 @@
             {{ form.hidden_tag() }}
             <div class="mb-3">
                 {{ form.new_username.label(class="form-label") }}
-                {{ form.new_username(class="form-control", id="new_username") | escape  }}
+                {{ form.new_username(class="form-control", id="new_username") }}
             </div>
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary") }}
