--- a/flask_app/app/templates/auth/change_password.html
+++ b/flask_app/app/templates/auth/change_password.html
@@ -9,11 +9,11 @@
             {{ form.hidden_tag() }}
             <div class="mb-3">
                 {{ form.current_password.label(class="form-label") }}
-                {{ form.current_password(class="form-control", id="current_password") | escape  }}
+                {{ form.current_password(class="form-control", id="current_password") }}
             </div>
             <div class="mb-3">
                 {{ form.new_password.label(class="form-label") }}
-                {{ form.new_password(class="form-control", id="new_password") | escape  }}
+                {{ form.new_password(class="form-control", id="new_password") }}
             </div>
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary") }}
