--- a/flask_app/app/templates/auth/register.html
+++ b/flask_app/app/templates/auth/register.html
@@ -9,12 +9,12 @@
         <form method="POST" action="{{ url_for('.register') }}" class="mt-4">
             {{ form.hidden_tag() }}
             <div class="mb-3">
-                {{ form.username.label(class="form-label")}}<br>
-                {{ form.username(class="form-control", size=32) | escape }}
+                {{ form.username.label(class="form-label") }}<br>
+                {{ form.username(class="form-control", size=32) }}
             </div>
             <div class="mb-3">
-                {{ form.password.label(class="form-label")}}<br>
-                {{ form.password(class="form-control", size=32) | escape }}
+                {{ form.password.label(class="form-label") }}<br>
+                {{ form.password(class="form-control", size=32) }}
             </div>
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary") }}
